// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Footer EC renders correctly 1`] = `
<jest>
  <footer
    class="bcl-footer bcl-footer--ec"
  >
    <div
      class="container"
    >
      <div
        class="pt-4 pt-lg-5 row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold mb-2"
          >
            [Project name]
          </p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                                                              
        </div>
        <div
          class="col-12 col-lg-4 pb-4 pb-lg-0"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact [project name]
          </p>
          <p>
            Contact information of the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mt-3 mb-2"
          >
            Follow us on social media
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#facebook"
                />
              </svg>
              Facebook
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#twitter"
                />
              </svg>
              Twitter
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#linkedin"
                />
              </svg>
              Linkedin
            </a>
          </div>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            About us
          </p>
          <p>
            Information about the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Optional links
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
        </div>
      </div>
      <div
        class="pb-4 pb-lg-5 mt-4 mt-lg-5 bcl-footer__bordered-row row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold pb-2 mb-2"
          >
            More information on:
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
        </div>
      </div>
      <div
        class="pb-4 pb-lg-5 bcl-footer__bordered-row row"
      >
        <div
          class="col-12 col-lg-4 pb-lg-4"
        >
          <p
            class="fw-bold pb-2 mb-2"
          >
            European Commission
          </p>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Commission
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Follow the EC on social media
              <svg
                class="ms-2 ms-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#box-arrow-up-right"
                />
              </svg>
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Resources for partners
            </a>
          </div>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Language policy
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Cookies
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Privacy policy
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Legal notice
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`OE - Footer EU renders correctly 1`] = `
<jest>
  <footer
    class="bcl-footer bcl-footer--eu"
  >
    <div
      class="container"
    >
      <div
        class="pt-4 pt-lg-5 row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold mb-2"
          >
            [Project name]
          </p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                                                              
        </div>
        <div
          class="col-12 col-lg-4 pb-4 pb-lg-0"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact [project name]
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <p
            class="fw-bold border-bottom pb-2 mt-3 mb-2"
          >
            Follow us on social media
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#facebook"
                />
              </svg>
              Facebook
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#twitter"
                />
              </svg>
              Twitter
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#linkedin"
                />
              </svg>
              Linkedin
            </a>
          </div>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Optional links
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
        </div>
      </div>
      <div
        class="pb-4 pb-lg-5 mt-4 mt-lg-5 bcl-footer__bordered-row row"
      >
        <div
          class="col-12 col-lg-4 pb-4"
        >
          <img
            alt="logo"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact the EU
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Call us 00 800 6 7 8 9 10 11
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Use other telephone options
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Write us via our contact form
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Meet us at a local EU office
            </a>
          </div>
          <p
            class="fw-bold border-bottom pb-2 pt-3 mb-2"
          >
            Social media
          </p>
          <p>
            Search for 
            <a
              class="mb-2"
              href="#"
            >
              EU social media channels
            </a>
          </p>
          <p
            class="fw-bold border-bottom pb-2 pt-3 mb-2"
          >
            Legal
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Language policy
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Privacy policy
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Legal notice
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Cookies
            </a>
          </div>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 pt-4 pt-lg-0 mb-2"
          >
            EU institutions
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Parliament
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Council
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Council of the European Union
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Commission
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Court of Justice of the European Union
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Central Bank
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Court of Auditors
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European External Action Service
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Economic and Social Committee
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Committee of the Region
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Investment Bank
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Ombudsman
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Data Protection Supervisor
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Data Protection Board
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              European Personnel Selection Office
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Publications Office of the European Union
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Agencies
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;

exports[`OE - Footer renders correctly 1`] = `
<jest>
  <footer
    class="bcl-footer bcl-footer--neutral"
  >
    <div
      class="container"
    >
      <div
        class="pt-4 pt-lg-5 row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold mb-2"
          >
            [Project name]
          </p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                                                                              
        </div>
        <div
          class="col-12 col-lg-4 pb-4 pb-lg-0"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Contact [project name]
          </p>
          <p>
            Contact information of the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mt-3 mb-2"
          >
            Follow us on social media
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#facebook"
                />
              </svg>
              Facebook
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#twitter"
                />
              </svg>
              Twitter
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#linkedin"
                />
              </svg>
              Linkedin
            </a>
          </div>
        </div>
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            About us
          </p>
          <p>
            Information about the DG
          </p>
          <p
            class="fw-bold border-bottom pb-2 mb-2"
          >
            Optional links
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
        </div>
      </div>
      <div
        class="pb-4 pb-lg-5 mt-4 mt-lg-5 bcl-footer__bordered-row row"
      >
        <div
          class="col-12 col-lg-4"
        >
          <p
            class="fw-bold pb-2 mb-2"
          >
            More information on:
          </p>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
          <div
            class="mb-1"
          >
            <a
              class="standalone"
              href="#"
            >
              Link
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</jest>
`;
